fix range conflict with align items

--- a/app/assets/stylesheets/general/user_show.css
+++ b/app/assets/stylesheets/general/user_show.css
@@ -49,7 +49,6 @@
   height: 10px;
   width: 150px;
   display: flex;
-  align-items: center;
   flex-direction: column
 }
 
